# crypto-trading-skills

./: CLAUDE.md  README.md  dashboard.py  example_payload.json  funding_scanner.py  pinescript_ai.py  pyproject.toml  requirements.txt  sample_trades.csv  trade_journal.py  webhook_bridge.py
.github/workflows/: ci.yml
examples/: confluence_scorer.pine  mtf_confluence.pine  smc_reversal.pine
skills/funding-scanner/: SKILL.md
skills/pinescript-generator/: SKILL.md
skills/trade-journal/: SKILL.md
skills/webhook-bridge/: SKILL.md
tests/: test_trade_journal.py  test_webhook_bridge.py
